Almost done porting to 1.19.2