@@ -5,8 +5,10 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map.Entry;
 
-import mezz.jei.api.constants.VanillaRecipeCategoryUid;
+import mezz.jei.api.constants.RecipeTypes;
 import mezz.jei.api.recipe.IFocus;
+import mezz.jei.api.recipe.RecipeIngredientRole;
+import mezz.jei.api.recipe.RecipeType;
 import mezz.jei.api.recipe.advanced.IRecipeManagerPlugin;
 import mezz.jei.api.recipe.category.IRecipeCategory;
 import net.minecraft.core.NonNullList;
@@ -18,7 +20,7 @@ import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Ingredient;
 import net.minecraft.world.item.crafting.ShapelessRecipe;
 import net.minecraft.world.level.block.Block;
-import net.minecraftforge.registries.RegistryManager;
+import net.minecraftforge.registries.ForgeRegistries;
 import theking530.staticpower.StaticPower;
 import theking530.staticpower.cables.attachments.cover.CableCover;
 import theking530.staticpower.init.ModTags;
@@ -38,47 +40,27 @@ public class CoverRecipeCategory implements IRecipeManagerPlugin {
 	}
 
 	@Override
-	public <V> List<ResourceLocation> getRecipeCategoryUids(IFocus<V> focus) {
-		if (focus.getMode() == IFocus.Mode.OUTPUT && focus.getValue() instanceof ItemStack) {
-			// Looking up how a certain cover is crafted.
-			ItemStack itemStack = (ItemStack) focus.getValue();
-			if (itemStack.getItem() instanceof CableCover) {
-				return Collections.singletonList(VanillaRecipeCategoryUid.CRAFTING);
-			}
-		} else if (focus.getMode() == IFocus.Mode.INPUT && focus.getValue() instanceof ItemStack) {
-			// Looking up if a certain block can be used to make a cover. If this is a
-			// coversaw, then just return the crafting UI.r
-			ItemStack itemStack = (ItemStack) focus.getValue();
-			if (itemStack.getItem() instanceof BlockItem) {
-				BlockItem blockItem = (BlockItem) itemStack.getItem();
-				if (CableCover.isValidForCover(blockItem.getBlock())) {
-					return Collections.singletonList(VanillaRecipeCategoryUid.CRAFTING);
-				}
-			} else if (ModTags.tagContainsItem(ModTags.COVER_SAW, itemStack.getItem())) {
-				return Collections.singletonList(VanillaRecipeCategoryUid.CRAFTING);
-			}
-		}
-
-		return Collections.emptyList();
+	public <V> List<RecipeType<?>> getRecipeTypes(IFocus<V> focus) {
+		return List.of(RecipeTypes.CRAFTING);
 	}
 
 	@SuppressWarnings("unchecked")
 	@Override
 	public <T, V> List<T> getRecipes(IRecipeCategory<T> recipeCategory, IFocus<V> focus) {
-		if (!VanillaRecipeCategoryUid.CRAFTING.equals(recipeCategory.getUid())) {
+		if (!RecipeTypes.CRAFTING.equals(recipeCategory)) {
 			return Collections.emptyList();
 		}
 
-		if (focus.getMode() == IFocus.Mode.OUTPUT && focus.getValue() instanceof ItemStack) {
+		if (focus.getRole() == RecipeIngredientRole.OUTPUT && focus.getTypedValue().getIngredient() instanceof ItemStack) {
 			// Looking up how a certain facade is crafted
-			ItemStack coverSourceItemStack = (ItemStack) focus.getValue();
+			ItemStack coverSourceItemStack = (ItemStack) focus.getTypedValue().getIngredient();
 			if (coverSourceItemStack.getItem() instanceof CableCover) {
 				ItemStack coverBlockItem = new ItemStack(CableCover.getCoverItemBlock(coverSourceItemStack));
 				return Collections.singletonList((T) make(coverBlockItem, coverSourceItemStack));
 			}
-		} else if (focus.getMode() == IFocus.Mode.INPUT && focus.getValue() instanceof ItemStack) {
+		} else if (focus.getRole() == RecipeIngredientRole.INPUT && focus.getTypedValue().getIngredient() instanceof ItemStack) {
 			// Get the focused item stack and item.
-			ItemStack coverSourceItemStack = (ItemStack) focus.getValue();
+			ItemStack coverSourceItemStack = (ItemStack) focus.getTypedValue().getIngredient();
 			Item coverSourceItem = coverSourceItemStack.getItem();
 
 			// If the focused item is a saw, get all the recipes a saw can be used in.
@@ -87,8 +69,7 @@ public class CoverRecipeCategory implements IRecipeManagerPlugin {
 			if (ModTags.tagContainsItem(ModTags.COVER_SAW, coverSourceItem)) {
 				List<T> recipes = new ArrayList<T>();
 				// Get all the registered blocks.
-				for (Entry<ResourceKey<Block>, Block> block : RegistryManager.ACTIVE.getRegistry(Block.class)
-						.getEntries()) {
+				for (Entry<ResourceKey<Block>, Block> block : ForgeRegistries.BLOCKS.getEntries()) {
 					// If this is a valid cover block, create the recipe.
 					if (CableCover.isValidForCover(block.getValue())) {
 						ItemStack output = cableCover.makeCoverForBlock(block.getValue().defaultBlockState());
@@ -106,8 +87,7 @@ public class CoverRecipeCategory implements IRecipeManagerPlugin {
 				// If we can make a cover for this block, return that cover. Otherwise, return
 				// an empty itemstack.
 				if (CableCover.isValidForCover(((BlockItem) coverSourceItem).getBlock())) {
-					ItemStack output = cableCover
-							.makeCoverForBlock(((BlockItem) coverSourceItem).getBlock().defaultBlockState());
+					ItemStack output = cableCover.makeCoverForBlock(((BlockItem) coverSourceItem).getBlock().defaultBlockState());
 					output.setCount(8);
 					return Collections.singletonList((T) make(coverSourceItemStack, output));
 				} else {
@@ -121,8 +101,7 @@ public class CoverRecipeCategory implements IRecipeManagerPlugin {
 
 	private ShapelessRecipe make(ItemStack coverBlockItem, ItemStack result) {
 		// This id should only be used within JEI and not really matter
-		ResourceLocation id = new ResourceLocation(StaticPower.MOD_ID,
-				"cover/" + coverBlockItem.getItem().getRegistryName().toString().replace(':', '/'));
+		ResourceLocation id = new ResourceLocation(StaticPower.MOD_ID, "cover/" + ForgeRegistries.ITEMS.getKey(coverBlockItem.getItem()).toString().replace(':', '/'));
 
 		// Make sure we only display a single item.
 		coverBlockItem.setCount(1);
